--- a/3D/RefreshView.xib
+++ b/3D/RefreshView.xib
@@ -9,11 +9,7 @@
         </mutableArray>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlanViewController">
-            <connections>
-                <outlet property="refreshView" destination="iN0-l3-epB" id="JGj-27-6mL"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PlanViewController"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="RefreshView">
             <rect key="frame" x="0.0" y="0.0" width="375" height="142"/>
