--- a/3D/Base.lproj/Main.storyboard
+++ b/3D/Base.lproj/Main.storyboard
@@ -14,6 +14,9 @@
             <string>ProximaNova-Light</string>
             <string>ProximaNova-Light</string>
             <string>ProximaNova-Light</string>
+            <string>ProximaNova-Light</string>
+            <string>ProximaNova-Light</string>
+            <string>ProximaNova-Light</string>
         </mutableArray>
         <mutableArray key="ProximaNova-Reg.otf">
             <string>ProximaNova-Regular</string>
@@ -60,7 +63,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-646.5" y="-62.5"/>
+            <point key="canvasLocation" x="-646.5" y="-710.5"/>
         </scene>
         <!--Diagnosis Details View Controller-->
         <scene sceneID="WhR-Yo-HOc">
@@ -132,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8TF-TD-co3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="913.5" y="1442.5"/>
+            <point key="canvasLocation" x="921.5" y="1472.5"/>
         </scene>
         <!--Checkups View Controller-->
         <scene sceneID="Wca-XB-Tta">
@@ -278,7 +281,113 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RcO-3U-xSb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="477.5" y="1492.5"/>
+            <point key="canvasLocation" x="413.5" y="1472.5"/>
+        </scene>
+        <!--Recovery View Controller-->
+        <scene sceneID="3sc-XK-Jbm">
+            <objects>
+                <viewController id="GGO-u6-NE3" customClass="RecoveryViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="L5L-hi-i9S"/>
+                        <viewControllerLayoutGuide type="bottom" id="qpd-12-2nY"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XfB-dC-KRR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pXx-ev-kUP">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Diagnosis" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vjT-tu-73s" userLabel="Title">
+                                        <rect key="frame" x="52" y="14" width="271" height="21"/>
+                                        <fontDescription key="fontDescription" name="ProximaNova-Light" family="Proxima Nova" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EB1-Nw-yrA">
+                                        <rect key="frame" x="0.0" y="3" width="44" height="44"/>
+                                        <state key="normal" backgroundImage="back">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="back:" destination="GGO-u6-NE3" eventType="touchUpInside" id="99y-I0-fLb"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="QXG-fz-WKW">
+                                <rect key="frame" x="0.0" y="50" width="375" height="617"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="recoveryCellIdentifier" rowHeight="154" id="FDA-lN-sZf" customClass="RecoveryTableViewCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FDA-lN-sZf" id="7Xy-mx-9YI">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lvk-Iv-sGR">
+                                                    <rect key="frame" x="0.0" y="0.0" width="43" height="154"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jev-VY-Ajv">
+                                                            <rect key="frame" x="0.0" y="65" width="42" height="24"/>
+                                                            <fontDescription key="fontDescription" name="ProximaNova-Light" family="Proxima Nova" pointSize="28"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.29999999999999999" colorSpace="calibratedWhite"/>
+                                                </view>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="veX-vE-526">
+                                                    <rect key="frame" x="74" y="61" width="293" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uHo-Et-4ZQ">
+                                                    <rect key="frame" x="74" y="90" width="293" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ODM-eN-LzH">
+                                                    <rect key="frame" x="74" y="119" width="293" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5G-Mw-aWf">
+                                                    <rect key="frame" x="59" y="13" width="308" height="45"/>
+                                                    <fontDescription key="fontDescription" name="ProximaNova-Light" family="Proxima Nova" pointSize="34"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="label1" destination="veX-vE-526" id="jSL-Bo-cVK"/>
+                                            <outlet property="label2" destination="uHo-Et-4ZQ" id="DAF-0Y-gAS"/>
+                                            <outlet property="label3" destination="ODM-eN-LzH" id="WwI-H9-9dN"/>
+                                            <outlet property="numberLabel" destination="jev-VY-Ajv" id="x8i-Gq-3ld"/>
+                                            <outlet property="recoveryTitle" destination="O5G-Mw-aWf" id="zRv-XS-VME"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="GGO-u6-NE3" id="a3F-j2-sw2"/>
+                                    <outlet property="delegate" destination="GGO-u6-NE3" id="xRd-do-j5y"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="IPP-RW-OaV"/>
+                    <connections>
+                        <outlet property="tableView" destination="QXG-fz-WKW" id="bvJ-IO-nUI"/>
+                        <outlet property="titleLabel" destination="vjT-tu-73s" id="C09-kH-KZd"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iRt-pc-qLa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="413.5" y="-62.5"/>
         </scene>
         <!--Content View Controller-->
         <scene sceneID="SQF-rc-1Nf">
@@ -474,7 +583,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w75-va-Lh9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-128" y="-62.5"/>
+            <point key="canvasLocation" x="-128.5" y="-710.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="oXJ-bj-ThN">
@@ -491,7 +600,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3br-G7-ZbH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-694.5" y="2338.5"/>
+            <point key="canvasLocation" x="-714.5" y="3742.5"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="FxN-Rw-YhY">
@@ -521,7 +630,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NmJ-ne-o2m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-122.5" y="2338.5"/>
+            <point key="canvasLocation" x="-142.5" y="3742.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="F15-af-OeX">
@@ -557,7 +666,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D61-8W-Dqy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-646.5" y="1523.5"/>
+            <point key="canvasLocation" x="-666.5" y="2927.5"/>
         </scene>
         <!--Search View Controller-->
         <scene sceneID="S5z-6z-D6y">
@@ -590,7 +699,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qdp-FW-bC6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-87.5" y="1523.5"/>
+            <point key="canvasLocation" x="-107.5" y="2927.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="wg6-Cb-xNq">
@@ -609,7 +718,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E1n-9x-tyG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="433.5" y="-62"/>
+            <point key="canvasLocation" x="433.5" y="-710"/>
         </scene>
         <!--Plan View Controller-->
         <scene sceneID="VNa-30-vXY">
@@ -702,7 +811,6 @@
                                 </connections>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" red="0.031372549020000001" green="0.2901960784" blue="0.52156862749999999" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" id="Fej-Pe-7n6"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -711,6 +819,7 @@
                         <outlet property="titleLabel" destination="hWY-bv-Bab" id="Cib-Iv-HXo"/>
                         <segue destination="7Sq-eY-W4x" kind="push" identifier="diagnosisSegue" id="q3q-qP-Tur"/>
                         <segue destination="7lZ-qd-osu" kind="push" identifier="checkupSegue" id="96m-V3-myW"/>
+                        <segue destination="GGO-u6-NE3" kind="push" identifier="recoverySegue" id="yD0-D6-DEO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MtB-NC-jlM" userLabel="First Responder" sceneMemberID="firstResponder"/>
